--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -9,7 +9,7 @@ body {
   padding: 0;
   width: 100%;
   font-family: 'Work Sans', sans-serif;
-  color: #265C7F;
+  color: $mainColor;
   overflow-x: hidden;
 }
 
