--- a/src/sass/_services.scss
+++ b/src/sass/_services.scss
@@ -8,7 +8,7 @@
     font-weight: 700;
     margin: auto;
     margin-top: 30px;
-    color: #2B3648;
+    color: $mainColor;
     font-family: $headingFont;
   }
   .services-info-grid {
@@ -31,7 +31,7 @@
          margin: 0 auto;
          margin-bottom: 30px;
          font-size: 1rem;
-         color: #A1C6EA;
+         color: $textBlue ;
        }
        ul {
          width: 100%;
@@ -40,7 +40,7 @@
          flex-direction: column;
         list-style: none; 
          li {
-           color: #A1C6EA;
+           color: $textBlue;
          }
        }
 
@@ -95,7 +95,7 @@
          margin: 0 auto;
          text-align: center;
          background-color: white;
-         color: $lightBlue;
+         color: $mainColor;
          font-family: $headingFont;
          
     }
@@ -122,10 +122,12 @@
      h5 {
        font-size: 1.2rem;
        margin-bottom: 15px;
+       font-family: $headingFont;
      }
      p {
       font-size: 1rem;
       margin-bottom: 50px;
+      color: $textBlue;
      }
      a {
       background-color: $orange;
@@ -146,4 +148,203 @@
     height: 100px;
   }
 
+}
+@media (max-width: 414px ) {
+  .services-container {
+    .services-info-grid {
+      margin-top: 80px;
+      margin-bottom: 100px;
+      grid-template-columns: 1fr;
+      gap : 30px;
+
+      .info-con {
+        img {
+          display: none;
+        }
+        h4 {
+          display: none;
+        }
+        p {
+          display: none;
+        }
+        ul {
+          display: none
+        }
+        button {
+          font-size: 1.5rem;
+          margin: 0 auto;
+        }
+
+        #design-btn {
+          background-color: $orange;
+        }
+        #cms-btn {
+          background-color: #FAE037;
+          color: $mainColor;
+        }
+      }
+    }
+    .service-button-con {
+      width: 100%;
+      button {
+        color : $mainColor;
+        font-size: 1.1rem;
+      }
+      .active-service {
+        background: none;
+        border-radius: 0;;
+        color: $lightBlue;
+        border-bottom: 2px solid $lightBlue;
+
+      }
+    }
+    .services-display {
+      flex-direction: column;
+      height: 100%;
+      padding: 30px; 
+      .left-con {
+        width: 100%;
+        display: flex;
+        img {
+          width: 80%;
+          margin: 0 auto;
+        }
+      }
+      .right-con {
+        width: 100%;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        h5 {
+          margin: 25px auto;
+          text-align: center;
+          font-size: 1.5rem;
+        }
+        a { 
+          margin: 0 auto;
+          margin-bottom: 25px;
+        }
+      }
+    }
+    .scroll-ref {
+      width: 100%;
+      height: 10px;
+    }
+ }
+}
+
+
+@media (min-width: 415px ) and (max-width: 786px) {
+  .services-container {
+    .services-info-grid {
+      margin-top: 80px;
+      grid-template-columns: 1fr;
+      gap : 30px;
+// border: 2px solid black;
+// height: calc(100vh - 80px);
+      .info-con {
+        img {
+          display: none;
+        }
+        h4 {
+          display: none;
+        }
+        p {
+          display: none;
+        }
+        ul {
+          display: none
+        }
+        button {
+          font-size: 1.5rem;
+          margin: 0 auto;
+        }
+
+        #design-btn {
+          background-color: $orange;
+        }
+        #cms-btn {
+          background-color: #FAE037;
+          color: $mainColor;
+        }
+      }
+    }
+    .service-button-con {
+      width: 100%;
+      button {
+        color : $mainColor;
+        font-size: 1.1rem;
+      }
+      .active-service {
+        background: none;
+        border-radius: 0;;
+        color: $lightBlue;
+        border-bottom: 2px solid $lightBlue;
+
+      }
+    }
+    .services-display {
+      flex-direction: column;
+      height: 100%;
+      padding: 30px; 
+      .left-con {
+        width: 100%;
+        display: flex;
+        img {
+          width: 80%;
+          margin: 0 auto;
+        }
+      }
+      .right-con {
+        width: 100%;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        h5 {
+          margin: 25px auto;
+          text-align: center;
+          font-size: 1.5rem;
+        }
+        a { 
+          margin: 0 auto;
+          margin-bottom: 25px;
+        }
+      }
+    }
+    .scroll-ref {
+      width: 100%;
+      height: 10px;
+    }
+ }
+}
+
+@media (min-width: 787px ) and (max-width: 1100px) {
+  .services-container {
+    .services-info-grid {
+      margin-bottom: 150px;
+      .info-con {
+        img {
+          width: 60%;
+          margin: 0 auto;
+
+        }
+        ul {
+          display: none
+        }
+        button { 
+          margin-top: 15px;
+        }
+      }
+    }
+    .service-button-con {
+      width: 60%;
+    }
+    .services-display {
+      height: 100%;
+    }
+    .scroll-ref {
+      width: 100%;
+      height: 100px;
+    }
+  }
 }
