--- a/src/style.scss
+++ b/src/style.scss
@@ -1,10 +1,12 @@
 // Variables
 $headingFont : 'Poppins', sans-serif;
-$mainColor :#33485A;
+$mainColor : #02182B;
+$textBlue : #64A5E5;
 $lightBlue :#399AF8;
 $orange :#FF6900;
 
 @import "./sass/main";
 @import "./sass/header";
-@import "./sass/footer";@import "./sass/home";
+@import "./sass/footer";
+@import "./sass/home";
 @import "./sass/services";
