--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -26,6 +26,15 @@ body {
  }
 }
 
+.page-title {
+  font-size: 1.8rem;
+  font-weight: 700;
+  margin: auto;
+  margin-top: 30px;
+  color: $mainColor;
+  font-family: $headingFont;
+}
+
 @media (max-width: 414px ) {
   * {
     font-size: 15px;
