--- a/src/sass/_portfolio.scss
+++ b/src/sass/_portfolio.scss
@@ -7,12 +7,84 @@
       display: grid;
       grid-template-columns: repeat(2, 1fr);
       gap : 50px;
-      div {
+      li {
+        list-style-type: none;
         width: 100%;
+        transition: 0.5s;
+        width: 100%;
+        height: 260px;
+        border-radius: 5px;
+        transition: height 0.5s;
+      }
+      .project-img-con {
+        position: relative;
+        overflow: hidden;
+        height: 100%;
+        box-shadow: 0 0 15px rgba(0,0,0,0.18);
         img {
           width: 100%;
-          box-shadow: 0 0 15px rgba(0,0,0,0.18);
           cursor: pointer;
+          border-radius: 5px;
+        }
+      }
+      .project-info-con {
+        position: relative;
+        // border: 2px solid red;
+        grid-column: 2;
+        height: 500px;
+        width :100%;
+        transition: 0.5s;
+        .back-btn {
+          padding: 10px 30px;
+          position: absolute;
+          top: -55px;
+          left: -218px;
+          border: none;
+          outline: none;
+          background: none;
+          background-color: $lightBlue;
+          color: white;
+          font-size: 1rem;
+          padding: 10px 20px;
+          border-radius: 3px;
+          cursor: pointer;
+       }
+        .project-title {
+          font-size: 1.4rem;
+          font-weight: 700;
+          font-family: $headingFont;
+          margin-bottom: 15px;
+        }
+        .project-info {
+          font-size: 1rem;
+          font-weight: 400;
+          color: $textBlue;
+          margin-bottom: 50px;
+        }
+        a {
+          background-color: $orange;
+          padding: 10px 50px;
+          border-radius: 5px;
+          color: white;
+          font-weight: 400;
+          font-size: 1rem;
+          text-decoration: none;
+        }
+        .back-to-top {
+          background: none;
+          outline: none;
+          border: none;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          background-color: $lightBlue;
+          border-radius: 25px; 
+          width: 50px;
+          height: 50px;
+          margin-top: 200px;
+          img {
+            width: 40%;
+          }
         }
       }
     }
