--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,10 @@
   font-size: 18px;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -1268,15 +1272,104 @@ header nav ul #contact-button:hover {
   gap: 50px;
 }
 
-.portfolio-container .portfolio-grid div {
+.portfolio-container .portfolio-grid li {
+  list-style-type: none;
   width: 100%;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  width: 100%;
+  height: 260px;
+  border-radius: 5px;
+  -webkit-transition: height 0.5s;
+  transition: height 0.5s;
 }
 
-.portfolio-container .portfolio-grid div img {
-  width: 100%;
+.portfolio-container .portfolio-grid .project-img-con {
+  position: relative;
+  overflow: hidden;
+  height: 100%;
   -webkit-box-shadow: 0 0 15px rgba(0, 0, 0, 0.18);
           box-shadow: 0 0 15px rgba(0, 0, 0, 0.18);
+}
+
+.portfolio-container .portfolio-grid .project-img-con img {
+  width: 100%;
   cursor: pointer;
+  border-radius: 5px;
+}
+
+.portfolio-container .portfolio-grid .project-info-con {
+  position: relative;
+  -ms-grid-column: 2;
+  grid-column: 2;
+  height: 500px;
+  width: 100%;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.portfolio-container .portfolio-grid .project-info-con .back-btn {
+  padding: 10px 30px;
+  position: absolute;
+  top: -55px;
+  left: -218px;
+  border: none;
+  outline: none;
+  background: none;
+  background-color: #399AF8;
+  color: white;
+  font-size: 1rem;
+  padding: 10px 20px;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.portfolio-container .portfolio-grid .project-info-con .project-title {
+  font-size: 1.4rem;
+  font-weight: 700;
+  font-family: "Poppins", sans-serif;
+  margin-bottom: 15px;
+}
+
+.portfolio-container .portfolio-grid .project-info-con .project-info {
+  font-size: 1rem;
+  font-weight: 400;
+  color: #64A5E5;
+  margin-bottom: 50px;
+}
+
+.portfolio-container .portfolio-grid .project-info-con a {
+  background-color: #FF6900;
+  padding: 10px 50px;
+  border-radius: 5px;
+  color: white;
+  font-weight: 400;
+  font-size: 1rem;
+  text-decoration: none;
+}
+
+.portfolio-container .portfolio-grid .project-info-con .back-to-top {
+  background: none;
+  outline: none;
+  border: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: #399AF8;
+  border-radius: 25px;
+  width: 50px;
+  height: 50px;
+  margin-top: 200px;
+}
+
+.portfolio-container .portfolio-grid .project-info-con .back-to-top img {
+  width: 40%;
 }
 
 @media (max-width: 787px) {
