--- a/client/src/sass/_contact.scss
+++ b/client/src/sass/_contact.scss
@@ -33,22 +33,60 @@
       flex-direction: column;
       width: 80%;
       margin: 5px auto;
-      label {
-        font-size: 1rem;
-        font-weight: 500;
-        font-family: $headingFont;
-        margin-left: 5px;
-        margin-bottom: 3px;
+
+      .label-wrapper {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        label {
+          font-size: 1rem;
+          font-weight: 500;
+          font-family: $headingFont;
+          // margin-left: 5px;
+          // margin-bottom: 3px;
+        }
+        .asterix {
+         margin-left: auto;
+         font-size: 1.2rem;
+         font-weight: 600;
+         text-align: center;
+         color: $lightBlue;
+         }
+         .validation {
+           margin:0;
+           margin-left: 10px;
+          font-size: 0.8rem;
+          font-weight: 400;
+          color: #F83939;
+          text-align: left;
+          align-self: center;
+          display: none;
+        }
+        .show-validation {
+          display: block;
+          margin:0;
+          margin-left: 10px;
+         font-size: 0.8rem;
+         font-weight: 400;
+         color: #F83939;
+         text-align: left;
+         align-self: center;
+        }
       }
+
       input , textarea { 
         background-color: #C5E1FD;
         border: 2px $lightBlue solid;
+        border: none;
         border-radius: 3px;
         padding: 8px 5px;
         font-size: 1rem;
         font-weight: 400;
         font-family: $headingFont;
         outline: none;
+      }
+      input:focus , textarea:focus {
+        border: 2px $lightBlue solid;
       }
       input::placeholder, textarea::placeholder {
         font-size: 1rem;
@@ -59,6 +97,13 @@
       textarea {
         resize: none;
         height: 150px;
+      }
+      .input-correct {
+        border: 2px $lightBlue solid;
+      }
+      .input-incorrect {
+        background-color:#FDC5C5;
+        border: 2px #F83939 solid;
       }
     }
     #submit {
