--- a/client/src/sass/_home.scss
+++ b/client/src/sass/_home.scss
@@ -148,10 +148,42 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    img {
-      width: 100%;
+    position: relative;
+    
+    .img-con {
+      position: relative;
+      height: 263px;
+      overflow: hidden;
+      border-radius: 3px;
       box-shadow: 2px 4px 10px rgba(0,0,0,0.18);
+      transition : 0.3s;
+      background-color: black;
+      cursor: pointer;
+      .project-link {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        opacity:0;
+        transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        text-align: center;
+        z-index: 10;
+        padding: 10px 10px;
+        box-shadow: 0 0 15px rgba(0,0,0,0.18);
+        transition: 0.5s;
+        }
+      img {
+            width: 100%;
+            transition : 0.5s ease;
+          }
     }
+    .img-con:hover  img {
+      opacity:0.5;
+    }
+    .img-con:hover  .project-link {
+      opacity: 1;
+    }
+   
     h6 {
       font-size: 1.2rem;
       margin: 25px 0;
@@ -355,7 +387,7 @@
   
 .home-projects { 
   .projects-home-grid {
-    gap : 10px;
+    gap : 20px;
   .container {
     img {
       width: 80%;
