--- a/client/src/sass/_portfolio.scss
+++ b/client/src/sass/_portfolio.scss
@@ -10,7 +10,6 @@
       li {
         list-style-type: none;
         width: 100%;
-        transition: 0.5s;
         width: 100%;
         height: 260px;
         border-radius: 5px;
@@ -35,17 +34,20 @@
         width :100%;
         transition: 0.5s;
         .back-btn {
-          padding: 10px 30px;
+          padding: 10px;
           position: absolute;
-          top: -55px;
-          left: -218px;
+          top: -50px;
+          left: -92px;
           border: none;
           outline: none;
           background: none;
           background-color: $lightBlue;
           color: white;
           font-size: 1rem;
-          padding: 10px 20px;
+          display: flex;
+          align-items :center;
+          justify-content: center;
+          box-shadow: 0px 0px 10px rgba(0,0,0,0.18);
           border-radius: 3px;
           cursor: pointer;
        }
