--- a/client/src/sass/_services.scss
+++ b/client/src/sass/_services.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   .services-info-grid {
     width: 100%;
-    margin-top: 50px;
+    margin-top: 140px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     .info-con {
@@ -13,6 +13,26 @@
       display: flex;
       flex-direction: column;
       text-align: center;
+      position: relative;
+      .develop-background {
+        position: absolute;
+        top: -100px;
+        right: 10px;
+        z-index: -1;
+      }
+      .design-background {
+        position: absolute;
+        top: -100px;
+        left: 40px;
+        z-index: -1;
+      }
+      .cms-background {
+        position: absolute;
+        top: -150px;
+        right: -10px;
+        z-index: -1;
+      }
+
       h4 {
         font-size: 1.2rem;
         font-family: $headingFont;
