--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -11,4 +11,5 @@ $orange :#FF6900;
 @import "./sass/home";
 @import "./sass/services";
 @import "./sass/portfolio";
+@import "./sass/about";
 @import "./sass/contact";
