--- a/client/src/sass/_contact.scss
+++ b/client/src/sass/_contact.scss
@@ -23,10 +23,11 @@
     box-shadow: 0 0 15px rgba(0,0,0,0.18);
     h5 {
       margin: 5px auto;
-  
+      margin-bottom: 15px;
       font-size: 1.3rem;
       font-weight: 700;
       font-family: $headingFont;
+      color: $heading;
     }
     span {
       display: flex;
@@ -42,22 +43,21 @@
           font-size: 1rem;
           font-weight: 500;
           font-family: $headingFont;
-          // margin-left: 5px;
-          // margin-bottom: 3px;
+          color: $heading;
         }
         .asterix {
          margin-left: auto;
          font-size: 1.2rem;
          font-weight: 600;
          text-align: center;
-         color: $lightBlue;
+         color: $background;
          }
          .validation {
            margin:0;
            margin-left: 10px;
           font-size: 0.8rem;
           font-weight: 400;
-          color: #F83939;
+          color: $validation;
           text-align: left;
           align-self: center;
           display: none;
@@ -68,7 +68,7 @@
           margin-left: 10px;
          font-size: 0.8rem;
          font-weight: 400;
-         color: #F83939;
+         color: $validation;
          text-align: left;
          align-self: center;
         }
@@ -76,7 +76,7 @@
 
       input , textarea { 
         background-color: #C5E1FD;
-        border: 2px $lightBlue solid;
+        border: 2px $background solid;
         border: none;
         border-radius: 3px;
         padding: 8px 5px;
@@ -86,7 +86,7 @@
         outline: none;
       }
       input:focus , textarea:focus {
-        border: 2px $lightBlue solid;
+        border: 2px $background solid;
       }
       input::placeholder, textarea::placeholder {
         font-size: 1rem;
@@ -99,16 +99,16 @@
         height: 150px;
       }
       .input-correct {
-        border: 2px $lightBlue solid;
+        border: 2px $background solid;
       }
       .input-incorrect {
         background-color:#FDC5C5;
-        border: 2px #F83939 solid;
+        border: 2px $validation solid;
       }
     }
     #submit {
       width: 80%;
-      background-color: $lightBlue;
+      background-color: $background;
       border: none;
       outline : none;
       margin: 15px auto;
@@ -118,21 +118,46 @@
       font-family: $headingFont;
       color: white;
       border-radius: 3px;
-      cursor: pointer  ;
+      cursor: pointer;
+      transition: 0.5s;
+    }
+    #submit:hover{
+      background-color: $buttonHover;
+      color: $background;
     }
   }
   .contact-info {
     box-shadow: none;
     span {
-  flex-direction: row;
-  align-items: center;
-  p {
-    font-size: 1.1rem;
-    font-weight: 500;
-  }
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 15px;
+    img {
+      width: 40px;
+      margin-right: 14px;
+    }
+      p {
+        font-size: 1.1rem;
+        font-weight: 500;
+      }
     }
     .social-wrapper {
       justify-content: center;
+      a {
+        margin: 0 7px;
+      
+        img {
+          margin: 0;
+          width: 50px;
+          cursor: pointer;
+          border-radius: 25px;
+          background-color: $background;
+          transition: 0.5s;
+        }
+      }
+      img:hover {
+        box-shadow : 2px 4px 30px rgba(29,32,126,0.50); 
+      }
     }
   }
 }
@@ -157,13 +182,13 @@
         span {
         width: 100%;
         }
-    }
-    }
-  }
-}
+      }
+     }
+   }
+ }
 }
 
-
+ 
 @media (min-width: 415px ) and (max-width: 786px) {
   .contact-container {
     .contact-flex {
@@ -183,9 +208,9 @@
         span {
         width: 100%;
         }
+      }
+     }
     }
-    }
-  }
   }
 }
 
@@ -193,7 +218,6 @@
   .contact-container {
     .contact-flex {
       margin-top: 20px;
-    //  flex-direction: column;
      .contact-left , .contact-right {
       width: 100%;
       form {
@@ -208,9 +232,8 @@
         span {
         width: 100%;
         }
+      }
+     }
     }
-    }
   }
-  }
-
-  }
+}
