--- a/client/src/sass/_main.scss
+++ b/client/src/sass/_main.scss
@@ -12,7 +12,7 @@ body {
   padding: 0;
   width: 100%;
   font-family: 'Work Sans', sans-serif;
-  color: $mainColor;
+  color: $text;
   overflow-x: hidden;
 }
 
@@ -21,20 +21,40 @@ body {
  height: 100%;
  margin: 0 auto;
  display: flex;
- overflow: hidden;
- .app-container {
-   width: 1000px;
-   margin: 0 auto;
-   position: relative;
- }
+ position: relative;
+  .app-container {
+    width: 1000px;
+    margin: 0 auto;
+    position: relative;
+  }
+   .home-background {
+    width: 100%; 
+    height: 600px;
+    background-color: $background;
+    position: absolute;
+    top: 0px;
+  }
+  .services-background {
+    width: 100%; 
+    height: 550px;
+    background-color: $background;
+    position: absolute;
+    top: 830px;
+  }
+  .about-background {
+    width: 100%; 
+    height: 500px;
+    background-color: $background;
+    position: absolute;
+    top: 700px;
+  }
 }
-
 .page-title {
   font-size: 1.8rem;
   font-weight: 700;
   margin: auto;
   margin-top: 30px;
-  color: $mainColor;
+  color: $heading;
   font-family: $headingFont;
 }
 
@@ -45,14 +65,44 @@ body {
   .App {
     .app-container {
       width: 85%;
-      margin: 0 auto;
-      position: relative;
+    }
+    .home-background {
+      height: 100vh;
+    }
+    .services-background {
+      height: 900px;
+      top: 1125px;
+    }
+    .about-background {
+      height: 650px;
+      top: 950px;
     }
    }
 }
 
+@media (min-width: 414px ) and (max-width: 577px) {
+  * {
+    font-size: 15px;
+  }
+  .App {
+    .app-container {
+      width: 85%;
+    }
+    .home-background {
+      height: 100vh;
+    }
+    .services-background {
+      height: 740px;
+      top: 1125px;
+    }
+    .about-background {
+      height: 550px;
+      top: 820px;
+    }
+   }
+}
 
-@media (min-width: 415px ) and (max-width: 786px) {
+@media (min-width: 578px ) and (max-width: 786px) {
   
   * {
     font-size: 16px;
@@ -60,8 +110,14 @@ body {
   .App {
     .app-container {
       width: 85%;
-      margin: 0 auto;
-      position: relative;
+    }
+    .services-background {
+      height: 650px;
+      top: 880px;
+    }
+    .about-background {
+      height: 450px;
+      top: 840px;
     }
    }
 }
@@ -69,12 +125,28 @@ body {
   .App {
     .app-container {
       width: 85%;
-      margin: 0 auto;
-      position: relative;
+    }
+    .services-background {
+      height: 600px;
+      top: 830px;
+    }
+    .about-background {
+      height: 450px;
+      top: 870px;
     }
    }
 }
 
+
+@media (min-width: 787px ) {
+  .portfolio-background {
+    width: 100%; 
+    height: 400px;
+    position: absolute;
+    top: 800px;
+    background-color: $heading;
+  }
+}
 
 @media (max-width: 1400px) {
   body {
