--- a/client/src/sass/_portfolio.scss
+++ b/client/src/sass/_portfolio.scss
@@ -2,6 +2,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
+    margin-bottom: 200px;
     .portfolio-grid {
       margin: 100px 0;
       display: grid;
@@ -19,83 +20,212 @@
         position: relative;
         overflow: hidden;
         height: 100%;
-        box-shadow: 0 0 15px rgba(0,0,0,0.18);
+        box-shadow : 2px 4px 40px rgba(29,32,126,0.17);;
+         border-radius: 20px;
+         z-index: 2;
+         transition: 0.5s;
         img {
           width: 100%;
           cursor: pointer;
           border-radius: 5px;
         }
       }
+      .project-img-con:hover {
+        box-shadow : 2px 4px 40px rgba(29,32,126,0.30);
+      }
+      
       .project-info-con {
         position: relative;
-        // border: 2px solid red;
         grid-column: 2;
         height: 500px;
         width :100%;
         transition: 0.5s;
-        .back-btn {
-          padding: 10px;
-          position: absolute;
-          top: -50px;
-          left: -92px;
-          border: none;
-          outline: none;
-          background: none;
-          background-color: $lightBlue;
-          color: white;
-          font-size: 1rem;
-          display: flex;
-          align-items :center;
-          justify-content: center;
-          box-shadow: 0px 0px 10px rgba(0,0,0,0.18);
-          border-radius: 3px;
-          cursor: pointer;
-       }
         .project-title {
           font-size: 1.4rem;
           font-weight: 700;
           font-family: $headingFont;
           margin-bottom: 15px;
+          color: $heading;
         }
         .project-info {
           font-size: 1rem;
           font-weight: 400;
-          color: $textBlue;
+          color: $text;
           margin-bottom: 50px;
         }
+        span {
+          display: flex;
+          width: 100%;
+          .back-btn {
+            border: none;
+            outline: none;
+            background: none;
+            margin-right: 50px;
+            width : 50px;
+            background-color: $background;
+            color: white;
+            font-size: 1rem;
+            display: flex;
+            align-items :center;
+            justify-content: center;
+            box-shadow : 2px 4px 30px rgba(29,32,126,0.17);
+            border-radius: 35px;
+            border : $background solid 2px;
+            cursor: pointer;
+            transition: 0.5s;
+            img {
+              width: 100%;
+            }
+         }
+         .back-btn:hover {
+          box-shadow : 2px 4px 30px rgba(29,32,126,0.50);
+        }
         a {
-          background-color: $orange;
-          padding: 10px 50px;
-          border-radius: 5px;
+          margin: auto 0;
+          height: 80%;
+          background-color: $background;
+          padding: 10px 40px;
+          border-radius: 10px;
           color: white;
           font-weight: 400;
-          font-size: 1rem;
+          font-size: 1.1rem;
           text-decoration: none;
+          box-shadow : 2px 4px 30px rgba(29,32,126,0.17);
+          transition: 0.5s;
         }
-        .back-to-top {
-          background: none;
-          outline: none;
-          border: none;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          background-color: $lightBlue;
-          border-radius: 25px; 
-          width: 50px;
-          height: 50px;
-          margin-top: 200px;
-          img {
-            width: 40%;
+        a:hover {
+          box-shadow : 2px 4px 30px rgba(29,32,126,0.50);
+         } 
+        }
+
+        .text-bottom {
+          margin-top: 260px;
+          position: relative;
+          .hex-left {
+            position: absolute;
+            top: -300px;
+            left: -1000px;
+            z-index: 0;
           }
-        }
+          .hex-right {
+            position: absolute;
+            top: -80px;
+            right: -500px;
+            z-index: 0;
+          }
+          h4 {
+            color: white;
+            font-size: 1.5rem;
+            font-weight: 600;
+            font-family: $headingFont;
+            margin-bottom: 15px;
+            
+          }
+          p {
+            color: white;
+            font-size: 1rem;
+            font-weight: 400;
+            line-height: 25px;
+            width: 80%;
+            margin-bottom: 35px;
+          }
+          a {
+            margin-top: 15px;
+            height: 80%;
+            background-color: $background;
+            padding: 10px 40px;
+            border-radius: 10px;
+            color: white;
+            font-weight: 400;
+            font-size: 1.1rem;
+            text-decoration: none;
+            box-shadow : 2px 4px 30px rgba(29,32,126,0.17);
+            transition: 0.5s;
+          }
+          
+        }  
       }
     }
 }
 
-@media (max-width: 787px ) {
+
+@media (max-width: 414px ) {
   .portfolio-container {
+    margin-bottom: 0px;
     .portfolio-grid {
       grid-template-columns: 1fr;
+      margin-top: 50px;
+      gap : 10px;
+  
+      .project-img-con {
+        height: 200px;
+
+      }
+      .project-info-con {
+        margin-top: 20px;
+        span {
+          .back-btn {
+          margin-right: 5vw;
+          width: 45px;
+          height: 45px
+        }
+        a {
+          padding: 10px 30px;
+          align-self: flex-end;
+          margin-left: auto;
+        }
+      }
+      .text-bottom {
+        display: none;
+        }
+      }
+    }
+  }
+
+}
+
+@media (min-width: 414px) and(max-width: 787px ) {
+  .portfolio-container {
+    margin-bottom: 0px;
+    .portfolio-grid {
+      grid-template-columns: 1fr;
+      margin-top: 50px;
+      gap : 90px;
+      .project-img-con {
+        height: 300px;
+      }
+      .project-info-con {
+        margin-top: 0px;
+        margin-top: -60px;
+        span {
+          .back-btn {
+          margin-right: 5vw;
+          width: 45px;
+          height: 45px
+        }
+        a {
+          padding: 10px 30px;
+          align-self: flex-end;
+          margin-left: auto;
+        }
+      }
+      .text-bottom {
+        display: none;
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: 787px) and(max-width: 1100px ) {
+  .portfolio-container {
+    margin-bottom: 370px;
+    .portfolio-grid {
+      .project-info-con {
+      .text-bottom {
+        margin-top: 18vw;
+        }
+      }
     }
   }
 }
